-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
In the logs for one of the BFGs related to BF-40097, the log line associated with migration failure here can be emitted in a tight loop here if the opCtx is interrupted, such that this check throws, but the cancellation token is not cancelled, such that we continue and throw again.