SERVER-112985: Chunk Migrations Can Log Errors in Tight Loop (#47605)

GitOrigin-RevId: 2a6ab559fe291364d150548e1fb4518354806541